# youtube_m_prot

./: README.md  pyproject.toml
app/: __init__.py  cli.py  config.py
app/ai/: __init__.py  processor.py
app/orchestration/: __init__.py  jobs.py
app/storage/: __init__.py  dynamodb.py  s3.py
app/utils/: __init__.py  logging.py
app/web/: __init__.py  api.py
app/youtube/: __init__.py  client.py
docs/: architecture.md  web_prototype.md
tests/: conftest.py  test_config.py  test_jobs_fetch.py  test_storage_dynamodb.py  test_storage_s3.py  test_youtube_client.py
